--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-MSBQB6Z');</script>
     <!-- End Google Tag Manager -->
+    <!-- Global site tag (gtag.js) - Google Ads: 10986832382 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10986832382"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10986832382');
+</script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Duta Buah Segar Green Garden</title>
@@ -35,6 +44,10 @@ background-size: cover;
  border: 1px solid black; 
 }
     </style>
+    <!-- Event snippet for Page view conversion page -->
+<script>
+    gtag('event', 'conversion', {'send_to': 'AW-10986832382/BdQdCPXox94DEP6D9_Yo'});
+  </script>  
     <meta name="google-site-verification" content="PQ0pI0clTXjau9jAdl0f8Z3nIGyS_krFC-a8angnGEk" /> 
 </head>
   <body>
