--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@ background-size: cover;
  right:0.5%; 
  border: 1px solid black; 
 }
+.tombol{
+    position: fixed;
+    top:40%;
+    left:35%;
+}
+.tombol a{
+  font-size: 40px;
+}
     </style>
     <!-- Event snippet for Page view conversion page -->
 <script>
@@ -57,6 +65,10 @@ background-size: cover;
     <!-- End Google Tag Manager (noscript) -->
     <div class="gambar1">
         <img src="produk1.jpg" alt="Produk1" class="rounded-4" style="border:5px solid rgb(26, 83, 170)" width="400px">
+    </div>
+    <div class="tombol">
+      <a href="http://octoklik.net/?ref=googleads" class="btn btn-primary">Daftar</a>
+      <a href="http://octoklik.net/?ref=googleads" class="btn btn-primary">Register</a>
     </div>
     <div class="gambar3">
         <img src="produk3.jpg" alt="Produk3" class="rounded-4" style="border:5px solid rgb(26, 83, 170)" width="400px">
